// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`API レスポンス snapshot > GET /api/search?q=nonexistent 空結果 1`] = `[]`;

exports[`API レスポンス snapshot > GET /api/search?q=react レスポンス 1`] = `
[
  {
    "description": "React カスタムフック雛形",
    "name": "react-hook",
  },
  {
    "description": "React コンポーネント",
    "name": "react-component",
  },
]
`;

exports[`API レスポンス snapshot > GET /api/snippets レスポンス 1`] = `
[
  {
    "description": "React カスタムフック雛形",
    "name": "react-hook",
  },
  {
    "description": "React コンポーネント",
    "name": "react-component",
  },
  {
    "description": "Express API エンドポイント",
    "name": "express-api",
  },
]
`;

exports[`API レスポンス snapshot > GET /api/snippets/nonexistent 404 レスポンス 1`] = `
{
  "body": {
    "error": "Snippet "nonexistent" not found",
  },
  "status": 404,
}
`;

exports[`API レスポンス snapshot > GET /api/snippets/react-hook レスポンス 1`] = `
{
  "definition": {
    "description": "React カスタムフック雛形",
    "hooks": {
      "after-install": [
        {
          "echo": "✅ {{ name }} を作成しました",
        },
      ],
    },
    "name": "react-hook",
    "variables": {
      "description": {
        "description": "説明",
        "schema": {
          "default": "",
          "type": "string",
        },
      },
      "name": {
        "description": "フック名",
        "schema": {
          "type": "string",
        },
      },
    },
  },
  "files": {
    "{{ name }}.test.ts": "test("{{ name }}", () => {});",
    "{{ name }}.ts": "export function {{ name }}() { return null; }",
  },
}
`;
